# ORB_SLAM3_ROS2

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindORB_SLAM3.cmake
config/: 25red.yaml  stereo_bluerov_uw_bw.yaml
config/monocular/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml  left_mono.yaml
config/monocular-inertial/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml  left_mono-inertial.yaml  monocular-inertial.yaml
config/stereo/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml  color_rescaled.yaml  sm2_stereo.yaml
config/stereo-inertial/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml  stereo-inertial-rescaled.yaml  stereo-inertial.yaml
config/yaml slam/ROS1/MONO/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS1/MONO-INERTIAL/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS1/STEREO/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS1/STEREO_INERTIAL/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS2/MONO/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS2/MONO-INERTIAL/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS2/STEREO/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
config/yaml slam/ROS2/STEREO-INERTIAL/: 25full.yaml  25red.yaml  50full.yaml  50red.yaml
include/: mono-inertial-compressed-node.hpp  mono-inertial-node.hpp  mono_inertial.hpp  mono_inertial_compressed.hpp  monocular-compressed-slam-node.hpp  monocular-slam-node.hpp  monocular.hpp  monocular_compressed.hpp  slam_node.hpp  stereo-inertial-node.hpp  stereo-slam-node.hpp  stereo.hpp  stereo_image_saver.hpp  stereo_image_saver_node.hpp  stereo_inertial.hpp
launch/: mono.launch.py  mono_compressed.launch.py  mono_inertial.launch.py  mono_inertial_compressed.launch.py  stereo.launch.py  stereo_bluerov.launch.py  stereo_inertial.launch.py  stereo_inertial_rescaled.launch.py  stereo_inertialsim.launch.py  stereo_sim.launch.py  stereo_with_saver.launch.py
orbslam3_msgs/: CMakeLists.txt  package.xml
orbslam3_msgs/msg/: SlamStatus.msg
orbslam3_ros2/: CMakeLists.txt  package.xml
orbslam3_ros2/config/: bluerov_fpv.yaml  color_rescaled.yaml  stereo_bluerov.yaml  stereo_bluerov_uw_bw.yaml
orbslam3_ros2/include/: mono_inertial.hpp  mono_inertial_compressed.hpp  monocular.hpp  monocular_compressed.hpp  slam_node.hpp  stereo.hpp  stereo_image_saver.hpp  stereo_inertial.hpp
orbslam3_ros2/launch/: mono.launch.py  mono_compressed.launch.py  mono_inertial.launch.py  mono_inertial_compressed.launch.py  stereo.launch.py  stereo_color.launch.py  stereo_inertial.launch.py  stereo_realsense.launch.py
orbslam3_ros2/src/: mono-compressed.cpp  mono-inertial-compressed.cpp  mono-inertial.cpp  mono.cpp  slam_node.cc  stereo.cpp  stereo_image_saver.cpp  stereo_inertial.cpp  stereo_inertial_node.cpp  stereo_node.cpp
results/mono/: keyframe_trajectory.txt  map_points.ply
results/mono_inertial/: keyframe_trajectory.txt  map_points.ply  trajectory_kitti.txt
results/stereo/: keyframe_trajectory.txt  map_points.ply  trajectory_kitti.txt
results/stereo_inertial/: keyframe_trajectory.txt  map_points.ply  trajectory_kitti.txt
src/: mono-compressed.cpp  mono-inertial-compressed.cpp  mono-inertial.cpp  mono.cpp  slam_node.cc  stereo-inertial.cpp  stereo.cpp  stereo_image_saver.cpp  stereo_image_saver_node.cpp  stereo_inertial.cpp  stereo_inertial_node.cpp  stereo_node.cpp
src/monocular/: monocular-slam-node.cpp
src/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp  stereo.cpp
src/stereo-inertial/: stereo-inertial-node.cpp
